--- a/vacca/CHANGES
+++ b/vacca/CHANGES
@@ -1,3 +1,23 @@
+2016 
+
+VACCA 4.2: 13th September 2016, Bug Fixing release for beamlines!
+
+Solved path issues in beamlines
+Safer imports (panic/snaps)
+Setup.py restructured
+Better traces and inline documentation
+Panel icons/filters refactored
+Added VaccaSearchForm widget
+Added Property filters
+Added Init() and Restart() commands to property dialogs
+
+---------------------------------------------------------------------------------------------------------------------
+
+VACC4.1: BETA RELEASE ... MACHINE ONLY!!!
+
+VACC4.0: Fully refactored to allow interaction with Panic, Astor, TangoDB and other EPS-related widgets.
+
+
 2015
 
 Added custom widgets for tree, panel and properties; solving current issues with drag/drop between widgets using decorators.
