--- a/vacca/CHANGES
+++ b/vacca/CHANGES
@@ -1,3 +1,12 @@
+2017
+
+VACCA 4.4
+
+Solve bugs on selection from synoptic.
+Solve bugs on opening additional panels.
+Rework tree options menu.
+Rework JDRAW_HOOK mechanism.
+
 2016 
 
 VACCA 4.3: 9th November 2016, Migrated to github, tuned for ELinac demo
