--- a/vacca/CHANGES
+++ b/vacca/CHANGES
@@ -1,5 +1,15 @@
 2017
 
+VACCA 4.6
+
+Compatible with Taurus 4.1
+
+Bugs solved on labels and forms formatting.
+
+VACCA 4.5
+
+Compatible with Taurus 4.0
+
 VACCA 4.4
 
 Solve bugs on selection from synoptic.
